# Pipeline_IoT-Edge

./: .gitignore  Cargo.toml  GIT_WORKFLOW.md  README.md  docker-compose.yml  setup.sh
DOCKER/: Dockerfile  docker-compose.yml  docker-compose.yml.template  dockerfile
VPN/: hub_wg0_real.conf  wg0.conf.template
VPN/configuraciones_sanitizadas/: hub_wg0_sanitizado.conf  spoke_wg0_sanitizado.conf
docker/: Dockerfile  README.md  docker-compose.coordinator.yml  docker-compose.edge.yml  docker-compose.yml
docker/coordinator/: Dockerfile  entrypoint.sh
docker/edge/: Dockerfile  entrypoint.sh
docker/sensor/: Dockerfile  entrypoint.sh
docs/: CLUSTER_ROADMAP.md  DEPLOYMENT_GUIDE.md  POST_MORTEM.md  diagrama_red.md  evidencias.md  kubernetes_roadmap.md
netem/: README.md  apply_latency.sh  baseline.sh  baseline_vpn.sh  enlace_limitado.sh  falla_edge.sh  latencia_iot.sh  latencia_vpn.sh  perdida_paquetes.sh
rust/: Cargo.toml
rust/common/src/: lib.rs
rust/coordinator/: Cargo.toml
rust/coordinator/src/: main.rs
rust/edge/: Cargo.toml
rust/edge/src/: main.rs
rust/sensor/: Cargo.toml
rust/sensor/src/: main.rs
rust/src/: coordinator.rs  main.rs  models.rs  worker.rs
scripts/: deploy-coordinator.sh  deploy-edge.sh
vpn/: README.md  wg0.conf.template
