[package]
name = "mandelbrot_distribuido"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
# Desactivamos las default-features para que no pida OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json"] }
