[package]
name = "edge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Nuestra librería compartida de contratos
common = { path = "../common" }

# Servidor web asíncrono
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Cliente HTTP para enviar los reportes
reqwest = { version = "0.11", features = ["json"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"